--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,13 @@ h2 {
 }
 
 h3 {
-    font-family: 'Rokkitt', serif;
+    font-family: sans-serif;
+    font-size: 1.5rem;
 }
 
 img {
-    height: 25%;
-    width: 25%;
+    height: 30%;
+    width: 30%;
 }
 
 .center {
